--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "homepage": "https://github.com/groupystinks/writer#readme",
   "dependencies": {
-    "firebase": "2.4.2",
     "history": "2.0.1",
     "react": "0.14.8",
     "react-dom": "0.14.8",
@@ -31,7 +30,8 @@
     "react-redux": "4.4.2",
     "react-router": "2.1.1",
     "react-router-redux": "4.0.2",
-    "redux": "3.4.0"
+    "redux": "3.4.0",
+    "superagent": "1.8.3"
   },
   "devDependencies": {
     "babel-core": "6.7.4",
